# FaceUnlockLinux

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  NEXT_STEPS.md  README.md  faceunlock.desktop  faceunlock.py  gui.py  install.sh  install_deps.sh  pyproject.toml  setup_app.sh  uninstall.sh
data/faces/marcos/: embeddings.npy  metadata.json
data/faces/test_user/: embeddings.npy  metadata.json
src/: camera_test.py  config.py  core.py  liveness.py  logger.py  storage.py  system_integration.py  validate_setup.py
src/ui/: faces_tab.py  overlay.py  overlay_window.py  settings_tab.py  test_tab.py
tests/: test_storage.py
