[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faceunlock"
version = "0.1.0"
description = "Sistema de autenticação facial para Linux"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "face-recognition",
]

[project.scripts]
faceunlock = "faceunlock:main"
