[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faceunlock"
version = "0.1.0"
description = "Sistema de autenticação facial para Linux"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "face-recognition",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[project.scripts]
faceunlock = "faceunlock:main"
